--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,18 @@
- * Strength as value
- * Runner physics
- * npc and character generator
- * run and fight
- * 
+ * HUD, loose live
+ * volcano
+ * Level 
+ * M A M M A L S -- attack, slows you down, the fly around
+ * loading screen
+ * fight init to early. Connect.
+ * Game over
+ * Final target
+ * remove all console.log
+ 
+
+ * Runner physics clean up and change between runner and explore
+ * store player.
  * leveling
  * level1+level2
- * M A M M A L S -- attack, slows you down, the fly around
- * credits
- * loading screen
- * create random player... , dice sprite
- * store player.
- 
  * Give the oponents a bias or strategy in rlv.
  * Give the player hints about the oponents strategies as scrolls
  
